--- a/src/css/secoes/header.css
+++ b/src/css/secoes/header.css
@@ -5,12 +5,11 @@
 .header .logo {
     font-family: var(--fonte-secundaria);
     font-size: var(--fonte-extra-grande);
-    color: var(--cor-branca);
     border: 2px solid var(--cor-branca);
     border-radius: 50%;
     width: 65px;
     height: 65px;
-    line-height: 55px;
+    line-height: 60px;
     text-align: center;
     text-decoration: underline;
     transition: 0.2s;
@@ -26,39 +25,40 @@
 }
 
 .header nav li a {
-    text-transform: capitalize;
     color: var(--cor-branca);
+    text-transform: capitalize;
     font-size: 2rem;
     font-weight: 500;
     padding: 10px 20px;
-    transition: 0.2s;
+    transition: 0.2;
     border-radius: 50px;
-    letter-spacing: 1px;
+    letter-spacing: 2px;
     user-select: none;
 }
 
-.header nav ul li a:hover{
-    background-color: var(--cor-primaria);;
-    color: var(--cor-branca);
+.header nav ul li a:hover {
+    background-color: var(--cor-primaria);
+    
 }
 
-.header .menu{
-    display: none;    
+.header .menu {
+    display: none;
     width: 60px;
-    height: 60px;        
+    height: 60px;
     align-self: flex-end;
 }
 
-.header nav label{
+.header nav label {
     display: flex;
     flex-direction: column;
     cursor: pointer;
 }
-  
+
 .header .hamburguer {
+    background-color: var(--cor-branca);
+    color: var(--cor-branca);
     position: relative;
     display: block;
-    background-color: var(--cor-branca);
     width: 30px;
     height: 2px;
     top: 29px;
@@ -73,8 +73,8 @@
     display: block;
     width: 100%;
     height: 100%;
-    position: absolute;
-    transition: 0.2s ease-in-out;
+    position: relative;
+    transition: 1.5s ease-in-out;
 }
 
 .header .hamburguer:before {
@@ -95,7 +95,6 @@
 
 .header input:checked ~ label .hamburguer:before {
     transform: rotate(90deg);
-    top: 0;
 }
 
 .header input:checked ~ label .hamburguer:after {
@@ -103,8 +102,7 @@
     bottom: 0;
 }
 
-
-@media(max-width: 1280px) { 
+@media(max-width: 1280px) {
     .header {
         padding: var(--mobile-padding);
     }
@@ -112,10 +110,9 @@
 
 @media(max-width: 900px) {
     .header .menu {
-        display: block; 
+        display: block;
     }
 
-    /* pega todos os itens que após o input e que sao irmaos dele */
     .header nav input:checked ~ ul {
         display: block;
     }
@@ -123,20 +120,19 @@
     .header nav {
         position: absolute;
         top: 30px;
-        right: 20px;  
+        right: 20px;
         z-index: 1;
     }
 
-   .header nav ul {
-        display: none;        
-        background-color: var(--cor-fundo-escuro);         
-        padding: 20px;       
+    .header nav ul {
+        display: none;
+        background-color: var(--cor-fundo-escuro);
+        padding: 20px;
     }
-    
+
     .header nav li a {
         color: var(--cor-branca);
-        text-align: center;                
+        text-align: center;
         padding: 20px;
-        display: block;
     }
 }
