--- a/src/css/secoes/home.css
+++ b/src/css/secoes/home.css
@@ -25,7 +25,7 @@
     display: flex;
     width: 100%;
     border-radius: 50%;
-    border: 10px solid transparent;
+    border: px solid transparent;
 }
 
 .home .text-home p {
@@ -48,7 +48,12 @@
     margin-bottom: 30px;
 }
 
-@media(max-width: 280px) {
+@media(max-width: 980px) {
+    .home .full-screen{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
     .home .text-home,
     .home .img-home {
         flex: 0 0 100%;
